frontend/test/should_fail/computations_decl_use_calls_type_mismatch_proc_002.grg
using model_init;

proc(b:B) : (Node)
{
	return(b);
}

rule r
{
	b:B;
	modify {
		eval {
			def b2:B;
			(b2) = proc(b);
		}
	}
}

